# GameTemplate

./: .gitmodules  Assignment 2.md  Assignment 3.md  CMakeLists.txt  README.md  class_diagram.mermaid  main.cpp
.github/actions/setup-libconfig/: action.yml
.github/actions/setup-sfml/: action.yml
.github/workflows/: build.yml
assets/textures/: Heart.aseprite
config/: assets.conf  game.conf
data/: shader.frag
docs/: game_configuration.mermaid  objective.mermaid
ecs/: CMakeLists.txt
ecs/cmake/: utils.cmake
ecs/include/: Ecs.h  EcsTypes.h  Log.h  Manager.h  Settings.h  Version.h
ecs/include/impl/: ComponentStorage.h  Entity.h  Handle.h  HandleData.h  SignatureBitsets.h  SignatureBitsetsStorage.h  Tags.h
ecs/include/tools/: StrongTypedef.h  TypeList.h
ecs/src/: Log.cpp  main.cpp
game/: Action.h  Assets.cpp  Assets.h  CMakeLists.txt  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GameSettings.h  Log.cpp  Log.h  Types.h  pch.h
game/cmake/: FindConfig++.cmake
game/components/: CCollision.h  CInput.h  CLifespan.h  CScore.h  CShape.h  CTransform.h  Components.h
game/physics/: Physics.h
game/scenes/: GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h
game/signatures/: Signatures.h
game/tags/: Tags.h
game/tools/: AssetsSettings.h  BulletSettings.h  ConfigurationManager.cpp  ConfigurationManager.h  EnemySettings.h  FontSettings.h  Observable.h  PlayerSettings.h  WindowSettings.h
src/: CMakeLists.txt  Ecs.cpp  Ecs.h  Game.cpp  Game.h  Observable.h  Types.h  main.cpp
src/ecs/: CMakeLists.txt  ComponentStorage.h  EcsTypes.h  Entity.h  Handle.h  HandleData.h  Manager.h  Settings.h  SignatureBitsets.h  SignatureBitsetsStorage.h  StrongTypedefTags.h
src/ecs/cmake/: utils.cmake
src/ecs/include/: Ecs.h  Version.h
src/ecs/include/impl/: Entity.h
src/ecs/include/tools/: ForEachType.h  TypeList.h
src/ecs/src/: main.cpp
src/game/: CMakeLists.txt  GameEngine.cpp  GameSettings.h  Types.h
src/game/components/: CInput.h
src/game/physics/: Physics.cpp
src/game/scenes/: GameScene.cpp  MainMenuScene.h  Scene.cpp
src/game/signatures/: Signatures.h
src/game/tools/: BulletSettings.h  ConfigurationManager.cpp  GraphicsSettings.h  WindowSettings.h
src/logs/: CMakeLists.txt
src/logs/cmake/: utils.cmake
src/logs/include/: Version.h
src/logs/src/: Log.cpp
src/scenes/: MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h
src/tools/: ConfigurationManager.cpp  ConfigurationManager.h  GraphicsSettings.h  Observable.cpp  Observable.h  WindowSettings.h  for_each_type.h  strong_typedef.h  type_sequence.h
